lot refactoring steps 1/2
